# weather-station-api-data-collector

./: .gitignore  .pre-commit-config.yaml  README.md  collect.py  pyproject.toml
settings/: create_env.py
